Fixed alignment of buttons for large screens

--- a/style.css
+++ b/style.css
@@ -300,6 +300,8 @@ h1 {
 .buttons {
     width: 100vw;
     display:flex;
+    align-content: center;
+    justify-content: center;
     padding: 50px 12%;
     gap: 5%;
 }
